--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Add new food here</h1>
+<%= render partial: 'shared/errors', locals:{ obj: @food } %>
 <%= form_with model: @food do |f| %>
   <div class = "form-box">
     <%= f.label :food_name, "Name of food", class: "food-label" %>
