--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,4 +1,5 @@
 <% @diaries.each do |d| %>
-<%= d.user.name %>
+<%= d.user.email %>
+<%= d.user.calories_budget %>
 <%= d.calories_budget %>
 <%end%>
