add time of day field to form

--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -24,5 +24,11 @@
     <%= form.text_field :carbs_eaten %>
   </div>
 
+  <div class="field">
+    <%= form.label :time_of_day %>
+    <%= form.text_field :time_of_day %>
+    "breakfast","lunch","dinner"
+  </div>
+
   <%= form.submit %>
 <% end %>
