style diet-summary

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+}
+.bg-grey{
+  background-color:whitesmoke;
+}
 .form-box {
   display: grid;
 }
@@ -7,7 +13,7 @@
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr ;
+  grid-template-rows: 1fr;
 }
 .title {
   text-align: center;
@@ -15,11 +21,23 @@
 .summary-card {
   grid-column: 2 / 3;
 }
+.pie-chart-card {
+  display:flex;
+  border: solid;
+  border-radius: 2%;
+}
+.neg-macro {
+  color: red;
+}
+.pos-macro {
+  color: green;
+}
+
 table {
   border-collapse: collapse;
 }
 table,tr,th {
-  border: solid;
+  border-bottom: solid;
 }
 table,tr,td {
   border: 1px solid;
