--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,1 +1,17 @@
 <%= render "diary_form" %>
+<% @foods.each do |food| %>
+  <% @diary = Diary.new %>
+  <%= form_with(model: @diary, local: true) do |form| %>
+    <%= food.food_name %>
+    <%= form.text_field :calories_eaten, value: food.calories %>
+    <%= food.calories %>
+    <%= form.text_field :protein_eaten, value: food.protein %>
+    <%= food.protein %>
+    <%= form.text_field :fats_eaten, value: food.fats %>
+    <%= food.fats %>
+    <%= form.text_field :carbs_eaten, value: food.carbs %>
+    <%= food.carbs %>
+    <%= form.submit "Add food" %>
+  <% end %>
+<% end %>
+
