--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,6 +1,16 @@
 body {
   margin: 0;
 }
+table {
+  border-collapse: collapse;
+}
+table,tr,th {
+  border-bottom: solid;
+}
+table,tr,td {
+  border: 1px solid;
+}
+
 .bg-grey{
   background-color:whitesmoke;
 }
@@ -13,7 +23,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr 3fr 1fr;
 }
 .title {
   text-align: center;
@@ -32,13 +42,32 @@ body {
 .pos-macro {
   color: green;
 }
+.sub-list {
+  border: solid;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.sub-card {
+  border: solid;
+  margin: 10px;
+  height: 10em;
 
-table {
-  border-collapse: collapse;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
 }
-table,tr,th {
-  border-bottom: solid;
+.sub-card-food {
+  border: solid;
+  flex: 0 0 60%;
+  width: 20em;
 }
-table,tr,td {
-  border: 1px solid;
+.sub-card-link {
+  align-self: flex-end;
+  justify-self: flex-end;
+  
 }
