--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "diary_form" %>
+<%= render "form" %>
 <% @foods.each do |food| %>
   <% @diary = Diary.new %>
   <%= form_with(model: @diary, local: true) do |form| %>
@@ -11,6 +11,8 @@
     <%= food.fats %>
     <%= form.text_field :carbs_eaten, value: food.carbs %>
     <%= food.carbs %>
+    <%= form.text_field :food_id, value: food.id %>
+    <%= form.hidden_field :time_of_day, value: params[:time_of_day] %>
     <%= form.submit "Add food" %>
   <% end %>
 <% end %>
