--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,3 +1,5 @@
 <%= render "form" %>
 <%= render "food_list_form" %>
+<%= link_to "add new food", new_food_path %>
+<%= link_to "Cancel", diaries_path %>
 
