--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -6,12 +6,14 @@
 
 .table {
   border-collapse: collapse;
+  border-right: solid;
 }
 .table th {
   border-bottom: solid;
 }
 .table td {
   border: 1px solid;
+  width: 150px;
 }
 
 .bg-grey{
