--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -48,7 +48,6 @@
   color: green;
 }
 .sub-list {
-  border: solid;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   margin: 20px;
@@ -70,6 +69,7 @@
   border: solid;
   flex: 0 0 60%;
   width: 20em;
+  margin: 12px;
 }
 .sub-card-link {
   align-self: flex-end;
