--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="title">Food index</h1>
 <% @foods.each do |food| %>
   <%= link_to "Show food", food_path(food) %>
   name:<%= food.food_name %></br>
