--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,5 +1,5 @@
 <%= render "form" %><br/>
-<%= render "food_list_form" %><br/>
+<%= render "foods/food_list_form" %><br/>
 <%= render "meals/form" %><br/>
 <%= render "foods_meals/index_form" %><br/>
 <%= link_to "add new food", new_food_path %><br/>
