--- a/app/views/foods_meals/new.html.erb
+++ b/app/views/foods_meals/new.html.erb
@@ -1,4 +1,5 @@
 <h1 class="title"><%=@meal.meal_name%></h1>
+<%= link_to "Go back", new_diary_path %>
 <div class= "meal-grid">
   <%= render "meal_foods_list" %>
   <div class="meal-sum-title">Budget:  <%= current_user.cals_budget%> calories</div>
@@ -6,4 +7,5 @@
       <%= @meal.foods.sum(:calories) %>
   </div>
   <%= render "foods/food_list_mini_form" %>
+  
 </div>
