add line between partials

--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,6 +1,8 @@
 <%= render "form" %><br/>
 <%= render "foods/food_list_form" %><br/>
 <%= render "meals/form" %><br/>
+<hr>
+<p>Your meals</p>
 <%= render "foods_meals/index_form" %><br/>
 <%= link_to "add new food", new_food_path %><br/>
 <%= link_to "Cancel", diaries_path %><br/>
