add pie chart sizing

--- a/app/views/diaries/_diet_summary.html.erb
+++ b/app/views/diaries/_diet_summary.html.erb
@@ -48,8 +48,9 @@
       <%end%>
     </tr>
   </table>
+  
   <%= pie_chart [
      ["Carbs", @carbsEaten],
       ["Protein" , @proteinEaten],
-       ["Fats", @fatsEaten]], height:"1000%"%>
+       ["Fats", @fatsEaten]], height: "150px", width: "400%"%>
 </div>
