--- a/app/views/diaries/_sub_diary.html.erb
+++ b/app/views/diaries/_sub_diary.html.erb
@@ -1,6 +1,8 @@
 <div class="sub-card">
   <div class="sub-card-food">
-    <%if diaries.last.food_id%>
+    <%if diaries.last.meal_id%>
+      <%= Meal.find(diaries.last.meal_id).meal_name %>
+    <%elsif diaries.last.food_id %> 
       <%= Food.find(diaries.last.food_id).food_name %>
     <%else%>
       <p>Your <%=diaries.last.time_of_day%>  log is empty</p>
