--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -2,22 +2,47 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* colors: purple #633aaa, light blue #80ccff */
+  /*          pruple shade #1e1133, blue shade #263d4d */
 }
-
 .table {
+  
+  width: 600px;
   border-collapse: collapse;
-  border-right: solid;
+  font-size: 18px;
 }
-.table th {
-  border-bottom: solid;
+.table th, td {
+  padding: 12px 16px;
+  text-align: left;
 }
-.table td {
-  border: 1px solid;
+.table thead th {
+  background-color: #633aaa;
+  width: 25%;
+  color: #fff;
 }
-
-.bg-grey{
-  background-color:whitesmoke;
+.table tbody tr:nth-child(2) {
+  background-color: #80ccff;
 }
+.table tbody tr {
+  background-color: #80ccff95;
+}
+/* rounding table corners manually because it won't when applied to the entire table */
+.table thead th:nth-child(1){
+  border-top-left-radius: 10px;
+}
+.table thead th:nth-child(5){
+  border-top-right-radius: 10px;
+}
+.table tbody tr:nth-child(3) th:nth-child(1){
+  border-bottom-left-radius: 10px;
+}
+.table tbody tr:nth-child(3) td:nth-child(5){
+  border-bottom-right-radius: 10px;
+}
+/* 
+ */
+/* 
+ */
 .form-box {
   display: grid;
 }
@@ -29,16 +54,11 @@
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr 3fr 1fr;
 }
+
 .title {
   text-align: center;
 }
-.summary-card {
-  grid-column: 2 / 3;
-}
-.pie-chart-card {
-  display:flex;
-  border: solid;
-}
+
 .neg-macro {
   color: red;
 }
