--- a/app/views/diaries/_diet_summary.html.erb
+++ b/app/views/diaries/_diet_summary.html.erb
@@ -1,56 +1,74 @@
-<div class="pie-chart-card">  
-  <table class= "table">
+<table class= "table">
+  <thead>
     <tr>
-      <th></th>
+      <th>Macros</th>
       <th>Cals</th>
       <th>Protein</th>
       <th>Fats</th>
       <th>Carbs</th>
     </tr>
-    <tr>
-      <td>Total</td>
-      <td> <%=current_user.cals_budget%>cal </td>
-      <td> <%=current_user.protein_budget%>g </td>
-      <td> <%=current_user.fats_budget%>g </td>
-      <td> <%=current_user.carbs_budget%>g </td>
-    </tr>
-    <tr>
-      <td>Used</td>
-      <td> <%=@calsEaten%>cal </td>
-      <td> <%=@proteinEaten%>g</td>
-      <td> <%=@fatsEaten%>g </td>
-      <td> <%=@carbsEaten%>g </td>
-    </tr>
-    <tr>
-      <td>Left</td>
-      <% if @calsLeft <= 0 %>
-        <td class="neg-macro"> <%=@calsLeft%>cal </td>
-      <%else%>
-        <td class="pos-macro"> <%=@calsLeft%>cal </td>
-      <%end%>
+  </thead>
+  <tr>
+    <th>Total</th>
+    <td> <%=current_user.cals_budget%>cal </td>
+    <td> <%=current_user.protein_budget%>g </td>
+    <td> <%=current_user.fats_budget%>g </td>
+    <td> <%=current_user.carbs_budget%>g </td>
+  </tr>
+  <tr>
+    <th>Used</th>
+    <%if @calsEaten%>
+      <td>-<%=@calsEaten%> cal</td>
+    <%else%>
+      <td>0</td>
+    <%end%>
+    <%if @proteinEaten%>
+      <td>-<%=@proteinEaten%> g</td>
+    <%else%>
+      <td>0</td>
+    <%end%>
+    <%if @fatsEaten%>
+      <td>-<%=@fatsEaten%> g</td>
+    <%else%>
+      <td>0</td>
+    <%end%>
+    <%if @carbsEaten%>
+      <td>-<%=@carbsEaten%> g</td>
+    <%else%>
+      <td>0</td>
+    <%end%>
+    
+  </tr>
+  <tr>
+    <th>Left</th>
+    <% if @calsLeft <= 0 %>
+      <td class="neg-macro"> <%=@calsLeft%>cal </td>
+    <%else%>
+      <td class="pos-macro"> <%=@calsLeft%>cal </td>
+    <%end%>
 
-      <% if @proteinLeft <= 0%>
-        <td class="neg-macro"><%=@proteinLeft%>g </td>
-      <%else%>
-        <td class="pos-macro"> <%=@proteinLeft%>g </td>
-      <%end%>
+    <% if @proteinLeft <= 0%>
+      <td class="neg-macro"><%=@proteinLeft%>g </td>
+    <%else%>
+      <td class="pos-macro"> <%=@proteinLeft%>g </td>
+    <%end%>
 
-      <% if @fatsLeft <= 0%>
-        <td class="neg-macro"><%=@fatsLeft%>g </td>
-      <%else%>
-        <td class="pos-macro"> <%=@fatsLeft%>g </td>
-      <%end%>
+    <% if @fatsLeft <= 0%>
+      <td class="neg-macro"><%=@fatsLeft%>g </td>
+    <%else%>
+      <td class="pos-macro"> <%=@fatsLeft%>g </td>
+    <%end%>
 
-      <% if @carbsLeft <= 0%>
-        <td class="neg-macro"><%=@carbsLeft%>g </td>
-      <%else%>
-        <td class="pos-macro"> <%=@carbsLeft%>g </td>
-      <%end%>
-    </tr>
-  </table>
-  
-  <%= pie_chart [
-     ["Carbs", @carbsEaten],
-      ["Protein" , @proteinEaten],
-       ["Fats", @fatsEaten]], height: "150px", width: "400%"%>
-</div>
+    <% if @carbsLeft <= 0%>
+      <td class="neg-macro"><%=@carbsLeft%>g </td>
+    <%else%>
+      <td class="pos-macro"> <%=@carbsLeft%>g </td>
+    <%end%>
+  </tr>
+</table>
+<%= pie_chart [
+  ["Carbs", @carbsEaten],
+  ["Protein" , @proteinEaten],
+  ["Fats", @fatsEaten]
+  ]%>
+
