remove header add container

--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,5 +1,4 @@
-<h1 class="title">Home</h1>
-<%= render "diet_summary" %>
+<div class="container-flex"><%= render "diet_summary" %></div>
 <div class="grid">
   <div class="sub-list">
     <% breakfastDiaries = @diaries.select {|diary| diary.time_of_day == "breakfast"} %>
