--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -5,11 +5,16 @@
   /* colors: purple #633aaa, light blue #80ccff */
   /*          pruple shade #1e1133, blue shade #263d4d */
 }
+.container-flex {
+  display: flex;
+}
 .table {
-  
   width: 600px;
   border-collapse: collapse;
   font-size: 18px;
+  box-shadow: 10px 10px 10px 1px rgba( 0, 0, 0 , .1);
+  margin: 30px;
+  border-radius: 10px;
 }
 .table th, td {
   padding: 12px 16px;
@@ -39,6 +44,12 @@
 .table tbody tr:nth-child(3) td:nth-child(5){
   border-bottom-right-radius: 10px;
 }
+.neg-macro {
+  color: red;
+}
+.pos-macro {
+  color: green;
+}
 /* 
  */
 /* 
@@ -59,12 +70,7 @@
   text-align: center;
 }
 
-.neg-macro {
-  color: red;
-}
-.pos-macro {
-  color: green;
-}
+
 .sub-list {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
