--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,15 @@
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif;
 }
+a:link{
+  color: #a071f1;
+}
+a:visited {
+  color: #a071f1;
+}
+a:hover {
+  color: #a071f1;
+}
+a:active{
+  color: #a071f1;
+}
