--- a/app/assets/stylesheets/sub_diaries.css
+++ b/app/assets/stylesheets/sub_diaries.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   gap: 80px;
   margin: 20px;
-  
+  padding-left: 15%;
+  padding-right: 15%;
 }
 .sub-diary {
   border-collapse: collapse;
@@ -15,8 +16,8 @@
   color: #fff;
   height: 36px;
   font-size: 20px;
-  text-align: left;
-  padding-left: 9%;
+  text-align: end;
+  padding-right: 9%;
 }
 .sub-diary thead th:nth-child(1){
   border-top-left-radius: 20px;
@@ -31,10 +32,21 @@
 }
 .sub-diary td {
   height: 24PX;
-  padding-left: 10%;
+  padding-right: 10%;
 }
 .sub-diary tbody tr:nth-child(even) {
   background-color: #80ccffca;
 }
 .sub-diary tbody tr:nth-child(odd) {
-  background-color: #80ccff95;}
+  background-color: #80ccff95;
+}
+.macros{
+  font-size: 10px;
+  font-style: italic;
+}
+.diary-item {
+  padding-left: 10%;
+}
+.link{
+  padding-left: 40%;
+}
