--- a/app/assets/stylesheets/diaries_new.css
+++ b/app/assets/stylesheets/diaries_new.css
@@ -1,50 +1,54 @@
-.form-box {
-  display: grid;
+.flex-container{
+  display: flex;
+  
 }
-.food-input {
-  width: fit-content;
-}
-.title {
-  text-align: center;
-}
-.meal-grid {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr 1fr;
-}
-.meal-card{
-  grid-column: 2 / 3;
-  grid-row: 2/3;
-  display: grid;
-  grid-template-rows: 1fr;
-}
-.meal-item {
+.form-group-1{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  height: 38px;
+  width: 350px;
+  margin: 20px;
+  background-color: #6e48b0;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px 1px rgba( 0, 0, 0 , .1);  padding: 10px;
 }
-.meal-name {
-  align-self: flex-start;
-  
+.form-group-1 p{
+  margin: auto;
+  font-size: 20px;
 }
-.meal-macros {
-  align-self: flex-end;
-  margin-right: 20px;
-  
-}
-.meal-sum {
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
+.diary-form{
+  color: #80ccffca;
   display: flex;
-  align-self: flex-end;
-  margin-left: 10px;
+  justify-content: center;
+  padding: 10px;
+
 }
-.meal-sum-title {
-  grid-column: 3 / 4;
-  grid-row: 1 / 2;
+.field{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 8px;
+  border-radius: 4px;
 }
-.food-list {
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
+/* ################################ */
+.form-group-2{
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  margin: 20px;
+  background-color: #6e48b0;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px 1px rgba( 0, 0, 0 , .08);
+  
 }
+.form-group-2 p{
+  margin: auto;
+  font-size: 20px;
+}
+.form-list{ 
+  border-radius: 20px;
+  color: #80ccffca;
+  padding: 15px;
+}
+/* #80ccffca blue
+   #633aaa purple
+*/
