--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -1,29 +1,30 @@
-<%= form_with(model: @diary, local: true) do |form| %>
-  <%= render partial: "shared/errors", locals:{obj: @diary} %>
+<div class="diary-form">
+  <%= form_with(model: @diary, local: true) do |form| %>
+    <%= render partial: "shared/errors", locals:{obj: @diary} %>
 
-  <div class="field">
-    <%= form.label :calories_eaten %>
-    <%= form.text_field :calories_eaten %>
-  </div>
+    <div class="field">
+      <%= form.label :calories_eaten %>
+      <%= form.text_field :calories_eaten %>
+    </div>
 
-  <div class="field">
-    <%= form.label :protein_eaten %>
-    <%= form.text_field :protein_eaten %>
-  </div>
-  
-  <div class="field">
-    <%= form.label :fats_eaten %>
-    <%= form.text_field :fats_eaten %>
-  </div>
+    <div class="field">
+      <%= form.label :protein_eaten %>
+      <%= form.text_field :protein_eaten %>
+    </div>
+    
+    <div class="field">
+      <%= form.label :fats_eaten %>
+      <%= form.text_field :fats_eaten %>
+    </div>
 
-  <div class="field">
-    <%= form.label :carbs_eaten %>
-    <%= form.text_field :carbs_eaten %>
-  </div>
+    <div class="field">
+      <%= form.label :carbs_eaten %>
+      <%= form.text_field :carbs_eaten %>
+    </div>
 
-  <div class="field">
-    <%= form.hidden_field :time_of_day, value: params[:time_of_day] %>
-  </div>
-
-  <%= form.submit %>
-<% end %>
+    <div class="field">
+      <%= form.hidden_field :time_of_day, value: params[:time_of_day] %>
+    </div>
+      <%= form.submit %>
+  <% end %>
+</div>
