--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,10 +1,17 @@
-<%= render "form" %><br/>
-<%= render "foods/food_list_form" %><br/>
-<%= render "meals/form" %><br/>
-<hr>
-<%if @foods_meals && !@foods_meals.empty?%>
-  <%= render "foods_meals/index_form"%><br/>
-<%end%>
-<%= link_to "add new food", new_food_path %><br/>
 <%= link_to "Cancel", diaries_path %><br/>
+  <%= link_to "add new food", new_food_path %>
+<div class= flex-container>
+  <div class="form-group-1">
+    <%= render "form" %><br/>
+    <p>- or -</p><br/>
+    <%= render "meals/form" %>
+  </div>
+  <div class="form-group-2">
+    <%= render "foods/food_list_form" %><br/>
+    <%if @foods_meals && !@foods_meals.empty?%>
+      <%= render "foods_meals/index_form"%><br/>
+    <%end%>
+  </div>
+</div>
+
 
