--- a/app/views/foods_meals/_index_form.html.erb
+++ b/app/views/foods_meals/_index_form.html.erb
@@ -1,26 +1,26 @@
 <p>Your meals</p>
-<% @foods_meals.each do |foods_meal|%>
-
-  <% meal = Meal.find(foods_meal.meal_id)%>
-  <%= form_with model: @diary do |form| %>
-    <%= meal.meal_name %>
+<table class="form-list">
+  <% @foods_meals.each do |foods_meal|%>
+    <% meal = Meal.find(foods_meal.meal_id)%>
+    <%= form_with model: @diary do |form| %>
     
-    <%= form.hidden_field :calories_eaten, value: meal.foods.sum(:calories) %>
-    <%= meal.foods.sum(:calories) %>
+      <tr>
+        <td><%= meal.meal_name %></td>
+        <td><%= meal.foods.sum(:calories) %> Cals</td>
+        <td><%= meal.foods.sum(:protein) %>p</td>
+        <td><%= meal.foods.sum(:fats) %>f</td>
+        <td><%= meal.foods.sum(:carbs) %>c</td>
+        <td><%= form.submit "Add meal" %></td>
+        <td><%= link_to "Edit meal", new_foods_meal_path(id: foods_meal.meal_id) %></td>
+      </tr>
 
-    <%= form.hidden_field :protein_eaten, value: meal.foods.sum(:protein) %>
-    <%= meal.foods.sum(:protein) %>
-
-    <%= form.hidden_field :fats_eaten, value: meal.foods.sum(:fats) %>
-    <%= meal.foods.sum(:fats) %>
-
-    <%= form.hidden_field :carbs_eaten, value: meal.foods.sum(:carbs) %>
-    <%= meal.foods.sum(:carbs) %>
-    
-    <%= form.hidden_field :time_of_day, value: params[:time_of_day] %>
-    <%= form.submit "Add meal" %>
-
-    <%= form.hidden_field :meal_id, value: meal.id %>
-    <%= link_to "Edit meal", new_foods_meal_path(id: foods_meal.meal_id) %>
+      <%= form.hidden_field :calories_eaten, value: meal.foods.sum(:calories) %>
+      <%= form.hidden_field :protein_eaten, value: meal.foods.sum(:protein) %>
+      <%= form.hidden_field :fats_eaten, value: meal.foods.sum(:fats) %>
+      <%= form.hidden_field :carbs_eaten, value: meal.foods.sum(:carbs) %>
+      <%= form.hidden_field :time_of_day, value: params[:time_of_day] %>
+      <%= form.hidden_field :meal_id, value: meal.id %>
+      
+    <%end%>
   <%end%>
-<%end%>
+</table>
