--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -1,7 +1,9 @@
-<%= form_with model: @meal do |f| %>
-  <hr>
-  <p>Create new meal</p>
-  <%= f.label :meal_name %>
-  <%= f.text_field :meal_name %>
-  <%=f.submit "Create Meal"%>
-<%end%>
+<div class="diary-form">
+  <%= form_with model: @meal do |f| %>
+    Create new meal
+    <%= f.text_field :meal_name %>
+    <div class="form-btn">
+      <%= f.submit "Create Meal"%>
+    </div>  
+  <%end%>
+</div>
