--- a/app/assets/stylesheets/diaries_new.css
+++ b/app/assets/stylesheets/diaries_new.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   width: 350px;
+  height: 350px;
   margin: 20px;
   background-color: #6e48b0;
   border-radius: 10px;
@@ -33,6 +34,7 @@
 .form-group-2{
   display: flex;
   flex-direction: column;
+  
   width: 450px;
   margin: 20px;
   background-color: #6e48b0;
@@ -48,6 +50,7 @@
   border-radius: 20px;
   color: #80ccffca;
   padding: 15px;
+  text-align: center;
 }
 /* #80ccffca blue
    #633aaa purple
