switch colors for diaries new

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ a:active{
   color: #a071f1;
 }
 input[type=button], input[type=submit], input[type=reset] {
-  background-color: #80ccffca;
+  background-color: #6e48b0;
   border: none;
   color: white;
   padding: 3px;
