--- a/app/assets/stylesheets/diaries_new.css
+++ b/app/assets/stylesheets/diaries_new.css
@@ -1,6 +1,6 @@
+/* new meal and custom entry form */
 .flex-container{
   display: flex;
-  
 }
 .form-group-1{
   display: flex;
@@ -31,18 +31,16 @@
   margin: 8px;
   border-radius: 4px;
 }
-/* ################################ */
+/*Food and FoodsMeal list form*/
 .form-group-2{
   display: flex;
   flex-direction: column;
-  
   width: 450px;
   margin: 20px;
   background-color: #67baf1ca;
   border: solid #6e48b0;
   border-radius: 10px;
   box-shadow: 0px 10px 10px 1px rgba( 0, 0, 0 , .08);
-  
 }
 .form-group-2 p{
   margin: auto;
@@ -54,6 +52,44 @@
   padding: 15px;
   text-align: center;
 }
+.button-link {
+  display: inline-block;
+  padding: 5px 5px;
+  background-color: #80ccffca;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border: solid #633aaa 1px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+}
+.button {
+  display: inline-block;
+  background-color: #6e48b0;
+  /* border: none; */
+  color: white;
+  padding: 3px;
+  /* margin: auto; */
+  border-radius: 20px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 10px;
+}
+.button:visited{
+  color: #fff;
+}
+.button:link{
+  color: #fff;
+}
+.button:hover {
+  color: #fff;
+}
+.button:active{
+  color: #fff;
+}
+
 /* #80ccffca blue
    #633aaa purple
 */
